@@ -17,6 +17,7 @@ body
 .testclass {border:2px dotted red;}
 .testclass2 {background-image:url(images/sc-logo.gif);}
 .smaller {font-size:smaller;}
+.hide {display:none;}
 </style>
 </head>
 <body onresize="doresize();">
@@ -25,15 +26,17 @@ body
 <span style="font-weight:bold;color:white;">ssctrltest1.html</span>
 <input type="button" name="savespreadsheet" value="Save" onclick="dosave();" class="smaller">
 <input type="submit" name="newcolors" value="New Colors" onclick="document.f0.action='?4C808';" class="smaller">
-<input type="button" value="Recalc" onclick="spreadsheet.ExecuteCommand('recalc', '');" class="smaller">
-<input type="button" value="Redisplay" onclick="spreadsheet.editor.ScheduleRender();" class="smaller">
-<input type="button" value="Settings" onclick="alert(sv=spreadsheet.editor.SaveEditorSettings());" class="smaller">
+<input class="hide" type="button" value="Recalc" onclick="spreadsheet.ExecuteCommand('recalc', '');" class="smaller">
+<input class="hide" type="button" value="Redisplay" onclick="spreadsheet.editor.ScheduleRender();" class="smaller">
+<input class="hide" type="button" value="Settings" onclick="alert(sv=spreadsheet.editor.SaveEditorSettings());" class="smaller">
 <input type="button" value="Reload" onclick="doreload();" class="smaller">
-<input type="button" value="CellHTMLSave" onclick="alert(spreadsheet.CreateCellHTMLSave(null));" class="smaller">
-<input type="button" value="CellHTML A1" onclick="alert(spreadsheet.CreateCellHTML('A1'));" class="smaller">
-<input type="button" value="SheetHTML" onclick="alert(spreadsheet.CreateSheetHTML());" class="smaller">
-<input type="button" value="SheetSave" onclick="alert(spreadsheet.CreateSheetSave());" class="smaller">
-<input type="button" value="Attribs" onclick="doattribs();" class="smaller">
+<input class="hide" type="button" value="CellHTMLSave" onclick="alert(spreadsheet.CreateCellHTMLSave(null));" class="smaller">
+<input class="hide" type="button" value="CellHTML A1" onclick="alert(spreadsheet.CreateCellHTML('A1'));" class="smaller">
+<input class="hide" type="button" value="SheetHTML" onclick="alert(spreadsheet.CreateSheetHTML());" class="smaller">
+<input class="hide" type="button" value="SheetSave" onclick="alert(spreadsheet.CreateSheetSave());" class="smaller">
+<input class="hide" type="button" value="Attribs" onclick="doattribs();" class="smaller">
+<input class="hide" type="button" value="New Copy" onclick="newcopy();" class="smaller">
+<input type="button" value="Sum" onclick="dosum();" class="smaller">
 <textarea id="savestr" style="display:none;"></textarea>
 <input type="hidden" name="newstr" id="newdata" value="">
 <input type="hidden" name="pagename" value="$pagename">
@@ -218,6 +221,51 @@ var range = window.getSelection().getRangeAt(0);
       ta.style.display = "none";
       }, 200);
    return;
+  }
+
+function dosum() {
+
+   var cmd, cell, row, col, sel, cr, foundvalue;
+
+   var spreadsheet = SocialCalc.GetSpreadsheetControlObject();
+   var editor = spreadsheet.editor;
+   var sheet = editor.context.sheetobj;
+
+   if (editor.range.hasrange) {
+      sel = SocialCalc.crToCoord(editor.range.left, editor.range.top)+
+         ":"+SocialCalc.crToCoord(editor.range.right, editor.range.bottom);
+      cmd = "set "+SocialCalc.crToCoord(editor.range.right, editor.range.bottom+1)+
+         " formula sum("+sel+")";
+      }
+   else {
+      row = editor.ecell.row - 1;
+      col = editor.ecell.col;
+      if (row<=1) {
+         cmd = "set "+editor.ecell.coord+" constant e#REF! 0 #REF!";
+         }
+      else {
+         foundvalue = false;
+         while (row>0) {
+            cr = SocialCalc.crToCoord(col, row);
+            cell = sheet.GetAssuredCell(cr);
+            if (!cell.datatype || cell.datatype=="t") {
+               if (foundvalue) {
+                  row++;
+                  break;
+                  }
+               }
+            else {
+               foundvalue = true;
+               }
+            row--;
+            }
+         cmd = "set "+editor.ecell.coord+" formula sum("+
+            SocialCalc.crToCoord(col,row)+":"+SocialCalc.crToCoord(col, editor.ecell.row-1)+")";
+         }
+      }
+
+   editor.EditorScheduleSheetCommands(cmd);
+
   }
 
 </script>
